# NativeInteropTest

./: README.md
Native/: .gitignore  Native.sln
Native/Native.Lib/: Native.Lib.csproj  NativeInterop.cs  libnativejson.so.1  libnativejson.so.1.0
Native/Native.Lib.Tests/: Native.Lib.Tests.csproj  UnitTest1.cs
nativejson/: CMakeLists.txt
nativejson/include/: lib.h
nativejson/src/: lib.cpp  main.cpp
